# delete-records-test

./: Cargo.toml  README.md
src/: config.rs  consumer.rs  main.rs  producer.rs  record_deleter.rs  stats.rs  web.rs
