[package]
name = "delete-records-test"
version = "0.1.0"
edition = "2021"
description = "Test to validate DeleteRecords for LRC"
license = "Apache-2.0"
repository = "https://www.github.com/michael-redpanda/delete-records-test.git"
readme = "README.md"
keywords = ["kafka", "redpanda"]
categories = ["command-line-utilities", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3", features = ["default", "derive"] }
env_logger = "0.10.0"
log = "0.4"
rdkafka = {git = "https://www.github.com/michael-redpanda/rust-rdkafka", branch = "kip-107-support"}
tokio = {version="1.28", features = ["full"]}