[package]
name = "delete-records-test"
version = "0.1.0"
edition = "2021"
description = "Test to validate DeleteRecords for LRC"
license = "Apache-2.0"
repository = "https://www.github.com/michael-redpanda/delete-records-test.git"
readme = "README.md"
keywords = ["kafka", "redpanda"]
categories = ["command-line-utilities", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6", features = ["default", "http2", "macros"]}
chrono = "0.4"
clap = {version = "4.3", features = ["default", "derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
governor = "0.5.1"
log = "0.4"
once_cell = "1.18"
rand = "0.8.5"
# Upstream rd-kafka has not merged in kip-107 support (though the PR has existed since January 2023)
# This branch takes the 0.32 and merges in that PR
rdkafka = {git = "https://www.github.com/michael-redpanda/rust-rdkafka", branch = "kip-107-support"}
serde = {version="1.0", features = ["derive"]}
tokio = {version="1.28", features = ["full"]}
tokio-util = {version="0.7.8", features = ["full"]}